# hixl

./: .clang-format  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  AGENTS_bak.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  HIXL_UBOE_DESIGN_glm.md  HIXL_UBOE_TEST_SUMMARY.md  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  UBG_UT测试用例总览.md  adxl_config.json  benchmark.md  build.sh  classify_rule.yaml  requirements.txt  run_test3.sh  run_test_exception.sh  run_test_exception_client.sh  run_test_exception_server.sh  version.cmake  version.info
benchmarks/: A2_benchmark_performance.md  A3_benchmark_performance.md  CMakeLists.txt  Generate_EndPoint_PoD.py  Generate_endpoint_list.py  README.md  README_en.md  auto_connect_heartbeat_sample.cpp  benchmark.cpp  benchmark_log.py  fabric_mem_d2d_seeded_tcp.cpp  fabric_mem_kv_benchmark.cpp  fabric_mem_kv_benchmark_summary.awk  fabric_mem_tcp_2rank.cpp  hixl_benchmark.cpp  hixl_cs_benchmark.cpp  hixl_cs_benchmark_exception.cpp  hixl_cs_benchmark_large.cpp  hixl_cs_benchmark_mixed_role.cpp  hixl_cs_benchmark_multi_pair.cpp  hixl_cs_benchmark_multi_thread.cpp  hixl_cs_concurrent_benchmark.cpp  hixl_mem_device_register_probe.cpp  kv_defaults.py  performance.md  performance_en.md  platform_detect.py  run_all_bench.sh  run_all_benchmarks.py  run_fabric_mem_kv_benchmark.sh  ub_normal.cpp
benchmarks/comm_benchmark/: CMakeLists.txt  hixl_comm_bench.cpp  hixl_cs_benchmark.cpp  hixl_cs_benchmark_exception.cpp  hixl_cs_benchmark_large.cpp  hixl_cs_benchmark_mixed_role.cpp  hixl_cs_benchmark_multi_pair.cpp  hixl_cs_benchmark_multi_thread.cpp
benchmarks/comm_benchmark/common/: benchmark_config.cpp  benchmark_config.h  client_runner.cc  client_runner.h  server_runner.cc  server_runner.h  tcp_client_server.cpp  tcp_client_server.h
benchmarks/comm_benchmark/metadata/: http_metadata_server.py
benchmarks/comm_benchmark/scripts/: plot_comm_benchmark.py  run_comm_benchmark.py  run_uboe_rd2h_host_flag_probe.sh
benchmarks/common/: benchmark_config.cpp  benchmark_config.h  client_runner.cc  client_runner.h  server_runner.cc  server_runner.h  tcp_client_server.cpp  tcp_client_server.h
benchmarks/kv_benchmark/: CMakeLists.txt  hixl_kv_bench.cpp  kv_transfer_executor.cpp  kv_transfer_executor.h
benchmarks/kv_benchmark/config/: models.json
benchmarks/kv_benchmark/kvstore/: kv_slice_layout.cpp  kv_slice_layout.h  kvstore.cpp  kvstore.h  model_config.cpp  model_config.h  segment_manager.cpp  segment_manager.h
benchmarks/kv_benchmark/scripts/: plot_kv_benchmark.py  run_kv_benchmark.py
benchmarks/performance/: communication_performance.json  merge_comm_csv_into_performance.py  migrate_legacy_performance_md_to_json.py  render_perf_md.py  render_performance_md.py
benchmarks/python/: benchmark_transfer_bandwidth.py
benchmarks/test_tools/: CMakeLists.txt  test_generate_local_comm_res.cc
cmake/device/: CMakeLists.txt
scripts/local_comm_res/: CMakeLists.txt  build_and_test.sh  local_comm_res_interface.md  local_comm_res_tool.cc  local_comm_res_tool.h  rootinfo_builder.cc  rootinfo_builder.h  server_8p_noroce.json  test_eid_data.json  test_local_comm_res.cc
scripts/tools/lcrgen/: CMakeLists.txt  README.md  local_comm_res_generator.cc
src/hixl/proxy/: CMakeLists.txt  dcmi_proxy.cc  dcmi_proxy.h  dsmi_internal_types.h  dsmi_proxy.cc  dsmi_proxy.h  hccp_proxy.cc  hccp_proxy.h  hcomm_proxy.cc  hcomm_proxy.h  runtime_proxy.cc  runtime_proxy.h
src/hixl/proxy/hcomm/: dcmi_proxy.cc  dcmi_proxy.h  hcomm_res_defs.h
src/ops/hixl_kernel/: CMakeLists.txt  HixlBatchPutAndGet.cc  hixl_batch_transfer.cc  hixl_batch_transfer.h  hixl_sync_transfer_ctx.cc  hixl_sync_transfer_ctx.h  kernel_launch.cc  kernel_launch.h  libcann_hixl_kernel.ini  task_exception_handler.cc  task_exception_handler.h  transfer_context_manager.cc  transfer_context_manager.h  tsfw_notifier.cc  tsfw_notifier.h
src/python/hixl/: CMakeLists.txt  hixl_py.cpp  hixl_py.h  setup.py
src/python/hixl/hixl/: __init__.py  exception.py  hixl.py  types.py
src/python/hixl_wrapper/: CMakeLists.txt  hixl_engine_wrapper.cc  hixl_engine_wrapper.h  hixl_py.cpp  hixl_wrapper.cc  hixl_wrapper.h
tests/cpp/adxl/: CMakeLists.txt  adxl_async_hostflag_unittest.cc  adxl_capability_unittest.cc  adxl_circuit_breaker_unittest.cc  adxl_engine_unittest.cc  adxl_test_helpers.h  buffer_transfer_service_unittest.cc  channel_msg_handler_unittest.cc  channel_pool_system_test.cc  channel_pool_unit_test.cc  comm_destroyer_unittest.cc  control_msg_handler_unittest.cc  segment_table_unittest.cc  statistic_manager_unittest.cc  test_adxl_engine_api.cc  transfer_slot_pool_unittest.cc
tests/cpp/hixl/: CMakeLists.txt
tests/cpp/hixl/common/: thread_pool_ut.cc
tests/cpp/hixl/cs/: endpoint_store_ut.cc  hixl_cs_client_basic_ut.cc  hixl_test.h  (+11 more)
tests/cpp/llm_datadist/: CMakeLists.txt  adxl_engine_api_unittest.cc  adxl_engine_unittest.cc  adxl_eviction_performance_test.cc  adxl_eviction_test.cc  aligned_ptr_unittest.cc  buffer_transfer_service_unittest.cc  channel_evictor_system_test.cc  channel_evictor_unit_test.cc  channel_manager_unittest.cc  channel_msg_handler_unittest.cc  channel_pool_system_test.cc  channel_pool_unit_test.cc  channel_pool_unittest.cc  comm_mem_manager_unittest.cc  control_msg_handler_unittest.cc  control_msg_handler_write_unittest.cc  data_cache_engine_unittest.cc  evictor_config.json  evictor_white_test.cc  fabric_mem_transfer_service_unittest.cc  heartbeat_test_utils.h  hixl_api_unittest.cc  llm_comm_link_manager_unittest.cc  llm_datadist_v2_api_unittest.cc  llm_utils_v2_unittest.cc  rank_table_generator_unittest.cc  segment_table_unittest.cc  statistic_manager_unittest.cc  test_adxl_engine_api.cc  test_channel_pool.cc  test_data_cache_engine.cc  test_hccn_tool.cc  test_hixl_api.cc  test_llm_datadist_v2_api.cc  transfer_message_limits_unittest.cc  virtual_memory_manager_unittest.cc
tests/cpp/ops/: CMakeLists.txt
tests/depends/dcmi/: CMakeLists.txt
(+1213 files in other folders)
